--- a/force-app/main/default/lwc/cSVLoader/cSVLoader.html
+++ b/force-app/main/default/lwc/cSVLoader/cSVLoader.html
@@ -1,5 +1,5 @@
 <template>
-    <lightning-card title="🚩Realice una CARGA MASIVA de Tanques Industriales">
+    <lightning-card title="🚩 Carga MASIVA de Tanques Industriales">
         <div class="slds-box slds-m-around_medium">
         <lightning-file-upload  accept={acceptedFormats}  
             label="Ajuntar archivo CSV" 
