lwc listaTipos_Tanques

--- a/force-app/main/default/lwc/listaTipos_Tanques/listaTipos_Tanques.html
+++ b/force-app/main/default/lwc/listaTipos_Tanques/listaTipos_Tanques.html
@@ -17,7 +17,7 @@
                                             <p><b>Marca:</b> {record.Marca__c} </p>
                                             <p><b>Capacidad:</b> {record.Capacidad__c} Litros </p>
                                             <p><b>Precio de Lista:</b> {record.Precio_de_lista__c} USD </p>
-                                            <p><b>URL Corto:</b> {record.URL_Corto__c} <a href="https://sforce.co/2Wb4DOB">https://sforce.co/2Wb4DOB</a></p>
+                                            <p><b>URL Corto:</b>{record.URL_Corto__c}</p>
                                         </div>
                                         <div class="img_container">
                                             <img class="tanque_img" src={record.URL_Imagen__c} />
