--- a/force-app/main/default/lwc/tipoDeTanqueCard/tipoDeTanqueCard.html
+++ b/force-app/main/default/lwc/tipoDeTanqueCard/tipoDeTanqueCard.html
@@ -2,10 +2,10 @@
     <lightning-card class="card slds-col slds-p-around_medium" title={tipotanque.Name} icon-name="custom:custom56">
         <div class="producto_body">
             <div class="producto_body_info">
-                <p><b>Marca:</b> {tipotanque.Marca__c} </p>
+                <!-- <p><b>Marca:</b> {tipotanque.Marca__c} </p>
                 <p><b>Capacidad:</b> {tipotanque.Capacidad__c} </p>
                 <p><b>Precio de Lista:</b> {tipotanque.Precio_de_lista__c} </p>
-                <p><b>URL Corto:</b> {tipotanque.URL_Corto__c} </p>
+                <p><b>URL Corto:</b> {tipotanque.URL_Corto__c} </p> -->
             </div>
             <!-- <img class="producto_img" src={TipoDeTanque.URL_Imagen__c} /> -->
             <lightning-button label="Ver Detalles" title="Detalles" onclick={navigateToRecordViewPage}></lightning-button>
