corrigiendo nombre lwc

--- a/force-app/main/default/lwc/fileUpload/fileUpload.html
+++ b/force-app/main/default/lwc/fileUpload/fileUpload.html
@@ -1,5 +1,5 @@
 <template>
-    <lightning-card title="CSV Uploader ">
+    <lightning-card title="🚩 Importar Tanques Industriales ">
        
     <div class="slds-box slds-m-around_medium">
        <lightning-file-upload  accept={acceptedFormats}  
